--- a/RiceAndBeans.Infrastructure/RiceAndBeans.Infrastructure.csproj
+++ b/RiceAndBeans.Infrastructure/RiceAndBeans.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\RiceAndBeans.Application\RiceAndBeans.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
