--- a/RiceAndBeans.Api/RiceAndBeans.Api.csproj
+++ b/RiceAndBeans.Api/RiceAndBeans.Api.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
 </Project>
