--- a/RiceAndBeans.Infrastructure/RiceAndBeans.Infrastructure.csproj
+++ b/RiceAndBeans.Infrastructure/RiceAndBeans.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Minio" Version="6.0.4" />
   </ItemGroup>
 
 </Project>
