finish the simple service to upload image using minio

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -13,7 +13,7 @@
     "Audience": "https://who-use-token.com"
   },
   "UploadFileSettings": {
-    "ServiceURL": "https://local-image-service.com",
+    "BaseUrl": "local-image-service.com",
     "AccessKey": "ACCESS_KEY",
     "SecretKey": "SECRET_KEY"
   }
