create conection with database and refatoring some places.

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -16,5 +16,8 @@
     "BaseUrl": "local-image-service.com",
     "AccessKey": "ACCESS_KEY",
     "SecretKey": "SECRET_KEY"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost:5432;Database=rice-and-beans;Username=postgres;Password=123456;Include Error Detail=true"
   }
 }
