add email service in project

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -19,5 +19,14 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost:5432;Database=rice-and-beans;Username=postgres;Password=123456;Include Error Detail=true"
+  },
+  "EmailSettings": {
+    "From": "app-email@gmail.com",
+    "DisplayName": "app-name",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "smtp-email@gmail.com",
+    "Password": "smtp-email-password",
+    "EnableSsl": true
   }
 }
