finish service to create a link and send to email for recover password.

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -28,5 +28,8 @@
     "UserName": "smtp-email@gmail.com",
     "Password": "smtp-email-password",
     "EnableSsl": true
+  },
+  "FrontendSettings": {
+    "PasswordRecoveryUrl": "https://domain.com/recover-password"
   }
 }
