in register user was create a function to able confirm email of user.

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -30,6 +30,7 @@
     "EnableSsl": true
   },
   "FrontendSettings": {
+    "ConfirmEmailUrl": "https://domain.com/confirm-email",
     "PasswordRecoveryUrl": "https://domain.com/recover-password"
   }
 }
