add cors configuration

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,7 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "domain.com;www.domain.com;*",
+  "CorsSettings": {
+    "AllowedOrigins": "https://domain.com;http://www.domain.com;*"
+  },
   "JwtSettings": {
     "Secret": "SECRET-JWT",
     "ExpiryMinutes": 120,
