update dockerfile, fix env injection in container

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "domain.com;www.domain.com;*",
+  "AllowedHosts": "api.domain.com;*",
   "CorsSettings": {
     "AllowedOrigins": "https://domain.com;http://www.domain.com;*"
   },
