--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,11 @@ name: Docker
 
 on:
   push:
-    branches: ["main"]
+    # branches: ["main"]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
   pull_request:
-    branches: ["main"]
+    # branches: ["main"]
 
 env:
   REGISTRY: ghcr.io
