create service to apply migrations.

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -35,5 +35,8 @@
   "FrontendSettings": {
     "ConfirmEmailUrl": "https://domain.com/confirm-email",
     "PasswordRecoveryUrl": "https://domain.com/recover-password"
+  },
+  "ApplyMigrationSettings": {
+    "MigrationToken": "secret-token"
   }
 }
