--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -18,7 +18,8 @@
   "UploadFileSettings": {
     "BaseUrl": "local-image-service.com",
     "AccessKey": "ACCESS_KEY",
-    "SecretKey": "SECRET_KEY"
+    "SecretKey": "SECRET_KEY",
+    "MainBucket": "bucket_name"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost:5432;Database=rice-and-beans;Username=postgres;Password=123456;Include Error Detail=true"
