create service to remove file from bucket

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -15,7 +15,7 @@
     "Issuer": "https://app-generate-token.com",
     "Audience": "https://who-use-token.com"
   },
-  "UploadFileSettings": {
+  "FileManagerSettings": {
     "BaseUrl": "local-image-service.com",
     "AccessKey": "ACCESS_KEY",
     "SecretKey": "SECRET_KEY",
