add policy log error in project - add serilog tools, connection with email and SEQ - was improved global exception error

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "SerilogSettings": {
+    "SeqServerUrl": "http://seq:5341",
+    "EmailConfigFrom": "app-email@gmail.com",
+    "EmailConfigTo": "admin-email@outlook.com",
+    "EmailConfigHost": "smtp.gmail.com",
+    "EmailConfigPort": "587",
+    "EmailConfigCrendentialUserName": "smtp-email@gmail.com",
+    "EmailConfigCrendentialPassword": "smtp-email-password"
   },
   "AllowedHosts": "api.domain.com;*",
   "CorsSettings": {
