add in docker-compose servers mailpit, seq and minio and adjusts services to work with dependencies containers

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -19,10 +19,12 @@
     "Audience": "https://who-use-token.com"
   },
   "FileManagerSettings": {
-    "BaseUrl": "local-image-service.com",
+    "Host": "host-service-file:9000",
+    "BaseUrl": "http://where-file-hospeded:9000",
     "AccessKey": "ACCESS_KEY",
     "SecretKey": "SECRET_KEY",
-    "MainBucket": "bucket_name"
+    "MainBucket": "bucket_name",
+    "EnableSsl": false
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost:5432;Database=rice-and-beans;Username=postgres;Password=123456;Include Error Detail=true"
