--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,34 @@ services:
     volumes:
       - rice-and-beans-db-volume:/var/lib/postgresql/data
 
+  mailpit:
+    image: axllent/mailpit
+    container_name: rice-and-beans-mailpit
+    ports:
+      - "8025:8025"   
+      - "1025:1025" 
+
+  seq:
+    image: datalust/seq:2024.3
+    container_name: rice-and-beans-seq
+    environment:
+      - ACCEPT_EULA=Y
+    ports:
+      - 8081:80
+
+  minio:
+    image: quay.io/minio/minio:RELEASE.2023-10-16T04-13-43Z
+    container_name: rice-and-beans-minio
+    ports:
+      - "9000:9000" 
+      - "9001:9001"  
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: 12345678
+    volumes:
+      - rice-and-beans-minio-volume:/data
+    command: server /data --console-address :9001
+
 volumes:
   rice-and-beans-db-volume:
+  rice-and-beans-minio-volume:
