--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 	<PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
